About us section

--- a/domestic-assistance-services.html
+++ b/domestic-assistance-services.html
@@ -54,7 +54,7 @@
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-info display-4" href="index.html">
                         Home</a>
-                </li><li class="nav-item"><a class="nav-link link text-info display-4" href="index.html#content4-2">
+                </li><li class="nav-item"><a class="nav-link link text-info display-4" href="index.html#step3-42">
                         About Us</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-info display-4" href="index.html#content4-g" data-toggle="dropdown-submenu" aria-expanded="false">
                         Services
                     </a><div class="dropdown-menu"><a class="dropdown-item text-info display-4" href="disability-support-services.html">Disability Support Services</a><a class="dropdown-item text-info display-4" href="ageing-support-services.html">Ageing Support Services</a><a class="dropdown-item text-info display-4" href="domestic-assistance-services.html">Domestic Assistance</a><a class="dropdown-item text-info display-4" href="transportation-services.html">Transportation</a><a class="dropdown-item text-info display-4" href="lawn-maintenance-services.html">Lawn Maintenance</a><a class="dropdown-item text-info display-4" href="supported-independent-living.html">Supported Independent Living</a></div></li>
@@ -68,7 +68,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section class="header1 cid-s7lr0Cty1S mbr-parallax-background" id="header1-1u">
+<section class="engine"><a href="https://mobirise.info/z">best css templates</a></section><section class="header1 cid-s7lr0Cty1S mbr-parallax-background" id="header1-1u">
 
     
 
@@ -136,7 +136,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xEZ29VioinYdOLn5aQiC4hkDgIWtJoptk5+RibZb3i3q54j2ArP+vOugH8qdwnLNDew4yYWFD8VlS0auWGTSCv8JKqOQg8uVvugNbVosc6vmC7ZYd8Mi6RAfxcuUEIt4">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="MkErUUoXk51ejps1qLslDbyg+bhWv57Ny2Bp6tJ/Loh3dO/gI6gDbtcywaxCucZr42cY0yPsFn7c04CVRUSR6LutVc9uVaY30G7wJEpx8T31yFmQ3lwmn1CEdSOVm+rn">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">We'll try to reach out to you soon!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -198,7 +198,7 @@
                 <p class="mbr-text mbr-fonts-style form-text display-7">Drop your email below and <br>we'll contact you!</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="b3+lEB/SWXDL1KWLAPK0hyxyhlFUFTc3nlp9gMnKrj15oE40vWyhmJ0auuVRC5Y7C1XZab83EiiMBCIlMM84pL8vkEH8wobuPne5IiQsaVq8aJAADfD7PnBM+23DLT+y">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="HYzMGwJX5slYy6m0NcWO027XF9wzRbF9XAB6exRmrzduuNsAtjhs6DGAAP/Nw41qoB6aBb7Fp4xNs0dth0ytAq/kxf6d6m4VW7EvLr00L103JOFjt8isugrFD+vi9XZM">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">We'll reach out to you soon!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
